# -advent_of_code_2021

./: .gitignore  Cargo.toml  prepare_day.bash  run.sh  start_day.bash  template.rs
aoc/: Cargo.toml
aoc/src/: lib.rs
benches/: bench.rs
day01/: Cargo.toml
day01/benches/: bench.rs
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
src/: Problem 24 Spreadsheet.ods  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  grid.rs  lib.rs  main.rs
template_manifest/: Cargo.toml
template_manifest/src/: main.rs
update_workspace/: Cargo.toml
update_workspace/src/: main.rs
