[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
nom = "7.1.0"
regex = "1.5.4"
serde = "1.0.130"
serde_json = "1.0.72"
criterion = { version = "0.3.5", features = ["html_reports"] }
